update angular.json, add manifest.webmanifest

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
   <meta name="twitter:description" content="We provide top-notch IT system development services for businesses in Croatia and beyond." />
   <meta name="twitter:image" content="https://mykoladiachok.github.io/it-systems/assets/og-image.jpg" />
 
-  <meta name="twitter:image" content="https://yourwebsite.com/assets/image.png" />
+  <meta name="twitter:image" content="https://mykoladiachok.github.io/it-systems/assets/image.png" />
 </head>
 <body>
   <app-root></app-root>
