--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,45 @@
   <meta name="twitter:image" content="https://mykoladiachok.github.io/it-systems/assets/og-image.jpg" />
 
   <meta name="twitter:image" content="https://mykoladiachok.github.io/it-systems/assets/og-image.png" />
+
+  <meta name="description" content="IT Systems Development offers professional IT solutions, including web development, cloud services, and IT consulting for businesses in Europe and worldwide." />
+  <!-- Clarity tracking code for https://mykoladiachok.github.io/it-systems -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "pd62aqpghs");
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Development of IT systems",
+      "description": "We provide IT consulting, software development, and cloud services for businesses in Croatia and Europe.",
+      "url": "https://mykoladiachok.github.io/it-systems/",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Ulica Franje Dursta 36",
+        "addressLocality": "Zagreb",
+        "addressRegion": "HR",
+        "postalCode": "10000",
+        "addressCountry": "Croatia"
+      },
+      "sameAs": [
+        "https://www.linkedin.com/company/105837413",
+        "https://github.com/MykolaDiachok"
+      ],
+      "areaServed": {
+        "@type": "AdministrativeArea",
+        "name": "Europe"
+      },
+      "priceRange": "$$$"
+    }
+  </script>
 </head>
 <body>
+  <h1 class="visually-hidden">About Us - Expert IT Services</h1>
   <app-root></app-root>
 </body>
 </html>
